<resources>
    <string name="app_name">Airmeet</string>
    <!-- Strings related to login -->
    <string name="flightNumber">Flight number</string>
    <string name="departureDate">Departure date</string>
    <string name="subscribe">Subscribe</string>
    <string name="departure">Departure</string>
    <string name="flightNotFound">Flight {0} with departure date {1} could not be found</string>
    <string name="subscribedToFlight">Subscribed to flight {0} with departure date {1}</string>
    <string name="flightTopicPattern">"/topics/Flight-{0}-{1}</string>
    <string name="flightinfoPattern" formatted="false">http://airmeet.eu-central-1.elasticbeanstalk.com/operations/flightinfosummaries/%s/%s</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="arrival">Arrival</string>
    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="notificationTitleFormat">{0}/{1}</string>

</resources>
